--- a/ext/templates-settings.html
+++ b/ext/templates-settings.html
@@ -362,6 +362,7 @@
             <option value="addNoteKanji">Add kanji note</option>
             <option value="addNoteTermKanji">Add term note</option>
             <option value="addNoteTermKana">Add term note (reading)</option>
+            <option value="viewKanji">View kanji on Kanji God</option>
             <option value="viewNotes">View notes</option>
             <option value="playAudio">Play audio</option>
             <option value="playAudioFromSource">Play audio from source</option>
